testsuite/tests/parser/should_fail/pfail011.alan
hello() : proc
  foo(f1 : integer)  : proc
  {}
{
}
